package persist;

import java.util.*;

/**
 * 
 */
public abstract class PostGresDaoFactory extends DaoFactory {

    /**
     * @return
     */
    public PostGresUserDao createUserDao() {
        return null;
    }

}